Revision history for BSON

{{$NEXT}}

v1.6.0    2018-05-15 09:41:21-04:00 America/New_York

    [Bugs]

    - [PERL-739] Validate Uint32 range on BSON::Timestamp components

    [New Feature]

    - [PERL-593] Add comparison overloading to BSON::OID  (HEAD -> master,
      sandbox/master, origin/master)

    - [PERL-688] Add create_oid class method 

    - [PERL-868] Add comparison overloading to BSON::Timestamp 

v1.4.0    2017-03-16 18:00:04-04:00 America/New_York

    [!!! Incompatible Changes !!!]

    - Minimum Perl version bumped up to v5.10.1 for byte-order modifiers
      for pack and unpack.

    [Bugs]

    - [PERL-694] - Tests fail on x86 (32-bit) without use64bitint perl

    [New Feature]

    - [PERL-751] - Support big-endian architectures

v1.2.2    2016-10-27 17:51:52-04:00 America/New_York

    [Changed]

    - Removed Module::Runtime prerequisite and improved error messages
      when no backends were loaded.

    [Testing]

    - Add testing for BSON::Regex flag ordering

v1.2.1    2016-10-24 20:56:51-04:00 America/New_York

    [Fixed]

    - Detects (and throws error) during encoding for non-container types

    - Fix BSON::Time for 32-bit Perls

    [Changed]

    - Switch to BSON::XS for optimized OID generation if available

    - Always stringify plain scalars as a last resort in encoding

    [Testing]

    - Add test module to reset environment and hide XS

v1.2.0    2016-08-17 15:51:50-04:00 America/New_York

    [Added]

    - Added dt_type support for Mango::BSON::Time

    - Added 'from_epoch' constructor method to BSON::OID

    [Documentation]

    - Credited Sebastian Riedel for inspiration regarding helper functions

    - Hash::Ordered is not yet supported

v1.0.0    2016-07-06 12:39:38-04:00 America/New_York

    [!!! Incompatible Changes !!!]

    - Internal representation of BSON::Bool changed to make it a subclass
      of boolean.pm for conistency with other "boolean" type classes on
      CPAN.
